Fix mobile alignment

--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -3,10 +3,22 @@
     padding-bottom: 60px;
     background: #302F4F;
     color: white;
+    font-size: 14px;
+    &__menuList {
+        & li {
+            margin-bottom: 10px;
+        }
+    }
 
 
     &__subscribe {
-        width: 100%;
+        & label {
+            margin-bottom: 10px;
+        }
+        & form {
+            display: flex;
+            justify-content: space-between;
+        }
         & input {
             background-color: rgba(255, 255, 255, 0.1);
             color: rgb(255, 255, 255);
@@ -15,11 +27,17 @@
             border-color: initial;
             border-image: initial;
             border-radius: 3px;
+            padding: 10px;
+            width: 65%;
         }
         & button {
             border-radius: 3px;
             text-align: center;
             background-color: rgb(90, 170, 189);
+            padding: 10px 15px 10px 15px;
+            color: white;
+            border: none;
+            width: 30%;
         }
     }
 
@@ -36,12 +54,14 @@
                 margin-right: 10px;
                 position: relative;
                 & div {
+                    position: absolute;
+                    top: 2px;
+                    left: 2px;
                     height: 25px;
                     width: 25px;
                     background: url('../assets/social.svg');
                     background-repeat: no-repeat;
                     background-position: center;
-                    position: absolute;
                 }
             }
 
@@ -49,5 +69,48 @@
     }
     &__title {
         margin-bottom: 30px;
+        display: none;
+        text-transform: uppercase;
+        font-weight: 600;
+        @include media-query($medium-up) {
+            display: block;
+          }
+          &-social {
+              text-align: right;
+          }
+    }
+    &__lang {
+        display: flex;
+        justify-content: flex-end;
+        &-dropdown {
+            padding: 10px;
+            background: rgba(255, 255, 255, 0.1);
+            color: white;    
+            border: none;
+            border-radius: 3px;
+        }
+    }
+    &__legal {
+        display: flex;
+        align-content: center;
+        justify-content: flex-end;
+        font-size: 11px;
+        text-align: left;
+        height: 100%;
+        align-items: flex-start;
+        flex-direction: column;
+        @include media-query($medium-up) {
+            font-size: 14px;
+            text-align: right;
+            flex-direction: row;
+            align-items: center;
+
+          }
+          & span {
+              padding-right: 10px;
+                & a {
+                  color: white;
+              }
+          }
     }
 }
